<resources>
    <string name="titulo">Mi primera aplicacion movil</string>
    <string name="tunombre">Cual es tu nombre</string>
    <string name="pulsar">Pulsame</string>
    <string name="limpiar">Limpiar</string>
    <string name="cerrar">Cerrar</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura (Metros)</string>
    <string name="calcular">Calcular</string>

    <string name="app_name">PrimerAplicacion</string>
    <string name="miempresa">Servicios Informaticos</string>
    <string name="alumno">Juan Aramburo</string>
    <string name="matricula">2020030187</string>
    <string name="materia">Desarrollo Movil</string>
    <string name="desImaCot">Logo Toyota</string>

    <!--Convertidor -->

    <string name="cel">Celcius a Fahrenheit</string>
    <string name="far">Fahrenheit a Celcius</string>
    <string name="res">Resultado</string>
    <string name="lblGrados">Grados</string>
    <string name="lblCantidad">Cantidad</string>
    <string name="btnLimpiar">Limpiar</string>
    <string name="btnCalcular">Calcular</string>
    <string name="btnCerrar">Cerrar</string>

    <!--- Arreglos -->
    <string-array name="monedas">
        <item>Dolares Americanos</item>
        <item>Dolares Canadienses</item>
        <item>Euros</item>
        <item>Libras Esterlinas</item>
    </string-array>
    <string name="dolarA">19.37</string>
    <string name="dolarC">13.97</string>
    <string name="euro">21.95</string>
    <string name="libra">26.00</string>

    <!-- Cotizacion -->
    <string name="domicilio">Av del Mar 1200</string>
    <string name="ciudad">Mazatlan, Sinaloa</string>
    <string name="marca">Toyota</string>
    <string name="cliente">Nombre del cliente</string>
    <string name="folio">Num. Folio</string>
    <string name="des">Descripcion del Automovil</string>
    <string name="precio">Valor del Automovil</string>
    <string name="po">Porcentaje de pago Inicial</string>
    <string name="plazos">Plazos</string>
    <string name="mensual">Pago Mensual</string>
    <string name="inicial">Pago Inicial</string>
    <string name="finan">Total a Financiar</string>

    <!--- Spinner -->
    <string name="spinner_name">Spinner personalizado</string>
    <string name="itemFrases">Categorias de Frases</string>
    <string name="itemAgradecimiento">Agradecimiento</string>
    <string name="itemAmor">Amor</string>
    <string name="itemNewYear">Año Nuevo</string>
    <string name="itemCanciones">Canciones</string>
    <string name="msgFrase">Desplegar</string>
    <string name="msgAgradecimiento">Prueba dar las gracias</string>
    <string name="msgAmor">Enamora con estas frases</string>
    <string name="msgNewYear">Feliz Año Nuevo</string>
    <string name="msgCanciones">Escucha solo lo mejor</string>
    <string name="msgSeleccion">Se ha seleccionado</string>
    <string name="msgDescripcion">Selecciona una categoria</string>
    <string name="itemAlumnos">Lista de Alumnos</string>
    <string name="itemAlumnos1">Selecciona un alumno</string>
    <string name="itemPersona1">Javier Lopez Gonzalez</string>
    <string name="itemPersona2">Rosa Isela Lopez</string>
    <string name="itemPersona3">Brenda Hernandez Camarena</string>
    <string name="itemPersona4">Jose Tavares Torres</string>
    <string name="itemPersona5">Jorge Aramburo Perez</string>
    <string name="itemPersona6">Alex Abrahantes</string>
    <string name="itemPersona7">Kevin Fuentes Talamantes</string>
    <string name="itemPersona8">Jesus Maria y Jose</string>
    <string name="carrera1">Ing. Tecnologias de la informacion</string>
    <string name="mat0">-</string>
    <string name="matPersona1">2022030100</string>
    <string name="matPersona2">2022030101</string>
    <string name="matPersona3">2022030102</string>
    <string name="matPersona4">2022030103</string>
    <string name="matPersona5">2022030104</string>
    <string name="matPersona6">2022030105</string>
    <string name="matPersona7">2022030106</string>
    <string name="matPersona8">2022030107</string>


</resources>