<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConversionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblGrados"
            android:id="@+id/lblGrados">

        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:hint="@string/lblCantidad"
            android:textColor="@color/colorTitulo"
            android:id="@+id/txtCantidad"
            android:inputType="numberDecimal"
            android:textAlignment="center">

        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="15sp">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup"
                android:layout_gravity="center"
                android:layout_marginTop="16sp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cel"
                    android:textSize="20sp"
                    android:checked="true"
                    android:id="@+id/rbdCel">

                </RadioButton>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/far"
                    android:textSize="20sp"
                    android:checked="true"
                    android:id="@+id/rbdFar">

                </RadioButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/res"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20sp"
                    android:id="@+id/txtResultado">

                </TextView>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCalcular"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:id="@+id/btnCalcular">

            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnLimpiar"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:id="@+id/btnLimpiar">

            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCerrar"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:id="@+id/btnCerrar">

            </Button>

        </LinearLayout>





    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>